# MasterDSB-TimeSeries

./: README.md  pyproject.toml  requirements.txt
Dataset/: Consommation_Bretagne.csv
Notebook/: 00-Introduction_toolkit.ipynb
