[tool.poetry]
name = "masterdsb-timeseries"
version = "0.1.0"
description = ""
authors = ["sschaack <sofiane.schaack@capgemini.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.1.3"
pyts = "^0.13.0"
plotly = "^5.18.0"
numpy = "^1.26.2"
scipy = "^1.11.3"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
